# alpaca

./: .gitignore  CHANGELOG.md  LICENSE  README.md  alpaca.cabal
app/: Main.hs
app/AlpacaExe/: Route.hs
app/AlpacaExe/Data/: Site.hs
app/AlpacaExe/Data/Article/Y2018/: DummyArticle.hs
src/: Alpaca.hs
src/Alpaca/: View.hs
src/Alpaca/Data/: Article.hs  Section.hs  Site.hs
src/Alpaca/Utils/: Article.hs  Time.hs
src/Alpaca/View/: Article.hs  Layout.hs  Section.hs
test/: AlpacaProp.hs  Spec.hs
