name:                  alpaca
version:               0.1.0
synopsis:              A mini site experiment
description:           A mini site experiment
homepage:              https://gitlab.com/gavinkflam/alpaca
license:               MIT
license-file:          LICENSE
author:                Gavin Lam
maintainer:            me@gavin.hk
copyright:             Copyright (c) 2018 Gavin Lam
category:              Web
build-type:            Simple
extra-source-files:    CHANGELOG.md, README.md
cabal-version:         >=1.10

library
  exposed-modules:     Alpaca.Data.Article
                       Alpaca.Data.Section
                       Alpaca.Data.Site
                       Alpaca.Utils.Article
                       Alpaca.Utils.Time
                       Alpaca.View.Article
                       Alpaca.View.Section
                       Alpaca.View.Layout
  build-depends:       base >= 4.11 && < 4.12
                     , blaze-html >= 0.9 && < 0.10
                     , lens >= 4.16 && < 4.17
                     , text
                     , time
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable alpaca-exe
  main-is:             Main.hs
  build-depends:       base
                     , alpaca
                     , blaze-html >= 0.9 && < 0.10
                     , here >= 1.2 && < 1.3
                     , text
                     , time
                     , scotty >= 0.11 && < 0.12
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010

test-suite alpaca-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       AlpacaProp
  build-depends:       base
                     , alpaca
                     , hspec >= 2.5 && < 2.6
                     , QuickCheck >= 2.11 && < 2.12
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
